--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
     defaultConfig {
-        applicationId "com.example.ffmpeg4"
+        applicationId "com.example.ffmpeg.c"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
