--- a/app/src/main/jni/CMakeLists.txt
+++ b/app/src/main/jni/CMakeLists.txt
@@ -26,6 +26,11 @@ add_library( # Sets the name of the library.
         ff_video.c
         player_jni.c
         android_jni.c
+
+        gles_draw.c
+        gles2/egl.c
+        gles2/gles.c
+#        gles2/matrix.c
         )
 
 add_library(libavcodec SHARED IMPORTED)
@@ -87,4 +92,6 @@ target_link_libraries( # Specifies the target library.
         ${log-lib}
         android
         OpenSLES
+        EGL
+        GLESv2
         )
